# PeopleDetection

./: CMakeLists.txt  PeopleDetection.cpp  README.md
